feat: bug fixes; notify SOs on DAR dataset approvals